--- a/galeria/templates/galeria/index.html
+++ b/galeria/templates/galeria/index.html
@@ -400,7 +400,7 @@
                         <img src="{% static 'img/pintura/pin-carrusel.png' %}" class="d-block w-100" alt="pinc">
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static 'img/tejido/te-carrusel.png' %}" class="d-block w-100" alt="tec">
+                        <img src="{% static 'img/tejido/tecarrusel.png' %}" class="d-block w-100" alt="tec">
                     </div>
                 </div>
             </div>
